<resources>
    <string name="app_name">Tute_03</string>
    <string name="tv_num1">Number 1</string>
    <string name="tv_num2">Number 2</string>
    <string name="et_n1" />
    <string name="et_n2" />
    <string name="btn_ok">OK</string>
    <string name="tv_answer" />
    <string name="btn_add">Add (+)</string>
    <string name="btn_substract">Substract (-)</string>
    <string name="btn_multiply">Multiply(x)</string>
    <string name="btn_devision">Devision(/)</string>
    <string name="et_toast">Openning the Calculator</string>
</resources>