<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        android:text="@string/tv_num1"
        android:textColor="#000080"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="135dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/tv_num2"
        android:textColor="#000080"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num1" />

    <EditText
        android:id="@+id/et_n1"
        android:layout_width="183dp"
        android:layout_height="36dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/et_n1"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_num1" />

    <EditText
        android:id="@+id/et_n2"
        android:layout_width="180dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/et_n2"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_num2"
        app:layout_constraintTop_toBottomOf="@+id/et_n1" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="221dp"
        android:layout_height="49dp"
        android:layout_marginStart="154dp"
        android:layout_marginLeft="154dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="154dp"
        android:layout_marginRight="154dp"
        android:text="@string/tv_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_n2" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="147dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:onClick="add"
        android:text="@string/btn_add"
        android:textSize="12sp"
        app:backgroundTint="#018786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answer" />

    <Button
        android:id="@+id/btn_substract"
        android:layout_width="141dp"
        android:layout_height="56dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:onClick="subtract"
        android:text="@string/btn_substract"
        android:textSize="12sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="143dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:onClick="multiply"
        android:text="@string/btn_multiply"
        android:textSize="12sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_devision"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:onClick="divide"
        android:text="@string/btn_devision"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toEndOf="@+id/btn_multiply" />

</androidx.constraintlayout.widget.ConstraintLayout>