<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="openSecond"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        android:text="@string/tv_num1"
        android:textColor="#000080"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="135dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/tv_num2"
        android:textColor="#000080"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num1" />

    <EditText
        android:id="@+id/et_n1"
        android:layout_width="183dp"
        android:layout_height="36dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/et_n1"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_num1" />

    <EditText
        android:id="@+id/et_n2"
        android:layout_width="180dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/et_n2"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_num2"
        app:layout_constraintTop_toBottomOf="@+id/et_n1" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="144dp"
        android:layout_height="45dp"
        android:layout_marginTop="116dp"
        android:onClick="openSecond"
        android:text="@string/btn_ok"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_n2" />
</androidx.constraintlayout.widget.ConstraintLayout>